Modal showing scene now appears correctly, but still has scrollbars to show the whole scene (svg doesn't fit the outer div size no matter what I do I give upgit add .

--- a/modal_style.css
+++ b/modal_style.css
@@ -77,10 +77,15 @@
 }
 
 .show-scene-wrap {
-    width: 100%;
-    height: 100%;
     display: flex;
     background-color: white;
+    max-height: 30%;
+    overflow: hidden;
+}
+
+#modal-show-scene-content {
+    max-height: 90%;
+    max-width: 90%;
 }
 
 /* Modal footer */
